added new features

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 DB_URL=mongodb+srv://developersaikishore:FqrCSXpczV9630cy@cluster0.0phct9g.mongodb.net/deshvihaar?retryWrites=true&w=majority
+cloud_name= 'dris02aop', 
+api_key= '619521999647115', 
+api_secret= '7o3LvPwyIYiSUWtQH96Ms44Dj4A'
+
