--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_URL=mongodb+srv://developersaikishore:FqrCSXpczV9630cy@cluster0.0phct9g.mongodb.net/deshvihaar?retryWrites=true&w=majority
+DB_URL=mongodb+srv://harsarinnovations:HntPSi5kv5iDVp1j@cluster1.dbiy7ye.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
 cloud_name= 'dris02aop', 
 api_key= '619521999647115', 
 api_secret= '7o3LvPwyIYiSUWtQH96Ms44Dj4A'
