--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_URL=mongodb+srv://harsarinnovations:HntPSi5kv5iDVp1j@cluster1.dbiy7ye.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
-cloud_name= dris02aop
-api_key=619521999647115 
-api_secret=7o3LvPwyIYiSUWtQH96Ms44Dj4A
+cloud_name=dtgmobbwm
+api_key=646794129519547 
+api_secret=IPLi4FwplPY0s5QPybb9-wFQ9SQ
 
